--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
                 <a href="#">Instagram</a>
             </li>
         </ul>
+        <div id="social-links"> 
+         <a href="http://" target="_blank">
+            <ion-icon name="logo-github"></ion-icon>
+         </a>
+         <a href="http://" target="_blank">
+            <ion-icon name="logo-instagram"></ion-icon>
+         </a>
+         <a href="http://" target="_blank">
+            <ion-icon name="logo-youtube"></ion-icon>   
+         </a>
+         <a href="http://" target="_blank">
+            <ion-icon name="logo-linkedin"></ion-icon>
+         </a>   
+        </div>
     </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
