--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">  
+<html lang="pt-br" class="ligh">  
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,9 +16,17 @@
 <body>
     <div id="container">
         <div id="profile">
-            <img src="Avatar.png" alt="foto">
+            <img src="imagens/Avatar.png" alt="foto">
             <p>@Luis Leme</p>
         </div>
+       
+        <div id="switch">
+            <button>
+            </button>
+            <span></span>
+        </div>
+
+
         <ul>
             <li>
                 <a href="#">Inscrever-se no PlayerTubers</a>
