--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="ligh">  
+<html lang="pt-br" class="ligh"> 
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,9 +12,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto</title>
     <link rel="stylesheet" href="style.css">
+    link
 </head>
 <body>
-    <div id="container">
+    <div id="container" onclick="troca()">
         <div id="profile">
             <img src="imagens/Avatar.png" alt="foto">
             <p>@Luis Leme</p>
@@ -29,7 +30,7 @@
 
         <ul>
             <li>
-                <a href="#">Inscrever-se no PlayerTubers</a>
+                <a href="#">Inscrever-se</a>
             </li>
 
             <li>
@@ -61,5 +62,8 @@
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
