--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 
         <ul>
             <li>
-                <a href="#">Inscrever-se</a>
+                <a href="https://www.youtube.com/">Inscrever-se</a>
             </li>
 
             <li>
-                <a href="#">Linkedin</a>
+                <a href="">Linkedin</a>
             </li>
 
             <li>
-                <a href="#">Veja meu portifólio</a>
+                <a href="">Veja meu portifólio</a>
             </li>
 
             <li>
-                <a href="#">Instagram</a>
+                <a href="">Instagram</a>
             </li>
         </ul>
         <div id="social-links"> 
