--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="ligh"> 
+<html lang="pt-br">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,21 +12,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto</title>
     <link rel="stylesheet" href="style.css">
-    link
+    
 </head>
-<body>
-    <div id="container" onclick="troca()">
+  <body>
+    <div id="container">
         <div id="profile">
             <img src="imagens/Avatar.png" alt="foto">
             <p>@Luis Leme</p>
         </div>
        
-        <div id="switch">
-            <button>
-            </button>
+        <div id="switch" onclick="troca()">
+            <button></button>
             <span></span>
         </div>
-
 
         <ul>
             <li>
@@ -45,6 +43,7 @@
                 <a href="">Instagram</a>
             </li>
         </ul>
+
         <div id="social-links"> 
          <a href="http://" target="_blank">
             <ion-icon name="logo-github"></ion-icon>
@@ -56,13 +55,12 @@
             <ion-icon name="logo-youtube"></ion-icon>   
          </a>
          <a href="http://" target="_blank">
-            <ion-icon name="logo-linkedin"></ion-icon>
+             <ion-icon name="logo-linkedin"></ion-icon>
          </a>   
         </div>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="script.js"></script>
-
-</body>
+  </body>
 </html>
