--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <ul>
             <li>
-                <a href="https://www.youtube.com/">Inscrever-se</a>
+                <a href="">Inscrever-se</a>
             </li>
 
             <li>
